objects/CSS_Service_Notes_Log__c.object
<CustomObject>
    <description>Capture Notes for Service Jobs</description>
    <fields>
        <fullName>Actor__c</fullName>
        <description>Captures the Profile that added the Note</description>
        <inlineHelpText>Capture the Profile of the User that added the Note</inlineHelpText>
        <label>Actor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Linked Job Order</description>
        <inlineHelpText>Select the Job Order for this Notes</inlineHelpText>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Service Notes Log</relationshipLabel>
        <relationshipName>CSS_Service_Notes_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <description>Type of Note</description>
        <inlineHelpText>Type of Note</inlineHelpText>
        <label>Note_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>Diagnose</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>4000 characters is max</description>
        <inlineHelpText>4000 characters is max</inlineHelpText>
        <label>Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CSS Service Notes Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Service Notes Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>